--- a/Gp/index.html
+++ b/Gp/index.html
@@ -104,8 +104,7 @@
               <li><i class="ri-check-double-line"></i>Biodiversity Monitoring System has a global reach, contributing to the understanding and conservation of biodiversity on a worldwide scale.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+              Whether you are a researcher, conservationist, policymaker, or simply a nature enthusiast, Biodiversity Monitoring System invites you to join our mission. Together, we can make a difference in safeguarding the incredible diversity of life on Earth.
             </p>
           </div>
         </div>
